# GeoIQ-Alpha-Health

./: ABOUT.md  CMakeLists.txt  README.md  SUBMISSION_CHANGELOG.md  config.txt  config_geology.ini  config_health.ini  run_pipeline.bat
data/: toxicology_database.json
data/raw/: samples.csv
frontend/: CMakeLists.txt  build.ps1  main.cpp
frontend/output/: geo_health_groups.json  tier1_public.html  tier2_advanced.html  tier3_auditor.html
frontend/src/: DataTypes.h  GeoHealthGrouper.h  GeoReader.h  HealthReader.h  HtmlCommon.h  HtmlTier1.h  HtmlTier2.h  HtmlTier3.h  JsonParser.h
src/: main.cpp
src/data/: CSVLoader.cpp  CSVLoader.h  Dataset.cpp  Dataset.h  SamplePoint.h
src/engine/: GridGenerator.cpp  GridGenerator.h  RuleEngine.cpp  RuleEngine.h  ScoreEngine.cpp  ScoreEngine.h
src/output/: GeoJSONWriter.cpp  GeoJSONWriter.h  HTMLWriter.cpp  HTMLWriter.h  KnownMines.h  PMTilesWriter.cpp  PMTilesWriter.h  ReportWriter.cpp  ReportWriter.h  SQLiteWriter.cpp  SQLiteWriter.h
src/spatial/: IDW.cpp  IDW.h  KDTree.cpp  KDTree.h  MovingWindow.cpp  MovingWindow.h  SpatialAnalysis.cpp  SpatialAnalysis.h
src/utils/: Config.cpp  Config.h  Constants.h  Enums.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  Statistics.cpp  Statistics.h  Structs.h
